--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -2,19 +2,30 @@ name: main_workflow
 on:
  push:
   branches:
-   - nodejs_linter_job
+   - nodejs_jest_job
 
 jobs:
- my_build:
-  runs-on: ubuntu-latest
-  steps:
-  - name: Checkout code
-    uses: actions/checkout@v2
-  - name: Linter execution
-    uses: github/super-linter@v3
+  my_build:
+    runs-on: ubuntu-latest
+    needs: test-execution
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Linter execution
+      uses: github/super-linter@v3
     env:
       DEFAULT_BRANCH: nodejs_example
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       LINTER_RULES_PATH: /
       JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
       VALIDATE_JAVASCRIPT_ES: true
+
+  test-execution:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Run jest tests
+      run: |
+       npm install jest
+       npm test
