--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   my_build:
+    name: my_build
     runs-on: ubuntu-latest
     needs: test-execution
     steps:
@@ -21,6 +22,7 @@ jobs:
       VALIDATE_JAVASCRIPT_ES: true
 
   test-execution:
+    name: test-execution
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
