--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Setting node version
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node }}
     - name: Linter execution
       uses: github/super-linter@v3
     env:
