Exer Surge proof

--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -31,10 +31,10 @@ jobs:
       - name: To deploy
         uses: dswistowski/surge-sh-action@v1
         with:
-          domain: 'viceentcb.surge.sh'
-          project: '.'
-          login: ${{ secrets.SURGELOGIN }}
-          token: ${{ secrets.SURGETOKEN }}
+          domain: viceentcb.surge.sh
+          project: .
+          login: ${{secrets.SURGELOGIN }}
+          token: ${{secrets.SURGETOKEN }}
 
 
 
