--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -14,10 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Send Message
         uses: ./.github/actions/SendMessageTelegram
-      - name: Push changes to repository
-        run: |
-          git config user.name viceentcb
-          git config user.email viceentcb@gmail.com
-          git add .
-          git commit -m "Proof commit"
-          git push origin send_telegram_action
+        with:
+          project: .
+          bot: ${{secrets.BOTTOKEN }}
+
