--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           TokenBot: ${{secrets.BOTTOKEN }}
           ChatId: ${{secrets.CHAT_ID }}
-          name: "Canario"
+          Name: "Canario"
 
 
 
