--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -18,6 +18,7 @@ jobs:
           TokenBot: ${{secrets.BOTTOKEN }}
           ChatId: ${{secrets.CHAT_ID }}
           Name: "Canario"
+          message: "Mensaje enviado"
 
 
 
