--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -18,7 +18,11 @@ jobs:
           TokenBot: ${{secrets.BOTTOKEN }}
           ChatId: ${{secrets.CHAT_ID }}
           Name: "Canario"
-          message: "Mensaje enviado"
+      - uses: jactor-rises/my-action@v1
+        id: mine
+        with:
+          message: this input
+      - run: echo ${{ steps.mine.outputs.some_output }}
 
 
 
