--- a/.github/workflows/send_telegram_workflow.yml
+++ b/.github/workflows/send_telegram_workflow.yml
@@ -18,8 +18,8 @@ jobs:
           TokenBot: ${{secrets.BOTTOKEN }}
           ChatId: ${{secrets.CHAT_ID }}
           Name: "Canario"
-          # message: this input
-      - run: "Mensaje enviado"
+          message: this input
+      - run: echo "Mensaje enviado"
 
 
 
